@@ -1,3 +1,10 @@
+Tue Nov  3 00:00:33 UTC 2009  Steven Stallion  <stallions@ociweb.com>
+
+        * tests/DCPS/UnitTests/DisjointSequence.cpp:
+        * tests/DCPS/UnitTests/UnitTests.mpc:
+
+          Added unit test for DisjointSequence implementation.
+
 Mon Nov  2 17:48:32 UTC 2009  Steven Stallion  <stallions@ociweb.com>
 
         * tools/test_burnin.sh:
